fix layout bugs

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -116,6 +116,7 @@ header  {
 .movies__title-wrapper {
     padding: 20px 60px;
     min-width: 500px;
+    margin-right: auto;
     text-shadow: 0px 1px 2px var(--session-border);
 }
 .movies__title {
